<resources>
    <string name="app_name">Redux Demo</string>
    <string name="login">Login</string>
    <string name="my_orders">My orders</string>
    <string name="artists">Artists</string>
    <string name="confirm_order">Confirm order</string>
    <string name="create_order">Create order</string>
    <string name="finish_order">Finish order</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_orders">Your orders</string>
    <string name="placed_by">Placed by:</string>
    <string name="placed_for">For:</string>
    <string name="placed_from">From:</string>
    <string name="placed_date">Placed date:</string>
    <string name="deadline">Deadline:</string>
    <string name="average_rating">Average rating:</string>
    <string name="number_of_ratings">Ratings count:</string>
    <string name="make_an_order">Make an order</string>
    <string name="filters">Filters</string>
    <string name="best_rating">Best rating</string>
    <string name="most_orders">Most orders</string>
    <string name="none">None</string>
    <string name="hip_hop">Hip-Hop</string>
    <string name="pop">Pop</string>
    <string name="rap">Rap</string>
    <string name="metal">Metal</string>
    <string name="folk">Folk</string>
    <string name="general_network_error">Unable to reach the server</string>
    <string name="recent_actions">Recent actions:</string>
    <string name="clear">Clear</string>
    <string name="your_order_for">Customize your order for %1$s</string>
    <string name="select_genres">Select genres for your order:</string>
    <string name="select_bpm">Select bpm:</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="select_deadline">Select deadline</string>
    <string name="data_not_available">Data not available</string>
    <string name="result">Result</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="send_for_approval">Send for approval</string>
    <string name="your_email">Your email:</string>
    <string name="name">Name:</string>
    <string name="role">Role:</string>
    <string name="logout">Logout</string>
    <string name="register_customer">Register (Customer)</string>
    <string name="register_artist">Register (artist)</string>
    <string name="something_went_wrong_orders">Something went wrong during loading your orders. Please, try again</string>

</resources>
