<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/artists"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"

        >

        <Button
            android:id="@+id/artistFiltersButton"
            android:text="@string/filters"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.chip.ChipGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/hipHopChip"
                android:text="@string/hip_hop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/rapChip"
                android:text="@string/rap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/metalChip"
                android:text="@string/metal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/folkChip"
                android:text="@string/folk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/popChip"
                android:text="@string/pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/availableArtistsRecycler"
        tools:itemCount="4"
        tools:listitem="@layout/item_artist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>
