<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/confirm_order"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderDescriptionTextView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        tools:text="Order description: I need some track"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:id="@+id/resultTextView"
        app:cornerRadius="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        tools:text="@string/result"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RatingBar
        android:id="@+id/ratingView"
        android:layout_marginTop="12dp"
        android:numStars="5"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rejectButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/reject"
            app:backgroundTint="@color/red"
            app:cornerRadius="16dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/approveButton"
            android:text="@string/approve"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            app:cornerRadius="16dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>
