<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayout"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:text="@string/your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:textAppearance="?attr/textAppearanceBody2"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextView"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        app:layout_constraintStart_toStartOf="@+id/emailTextView"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:text="@string/role"
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:id="@+id/roleTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:textAppearance="?attr/textAppearanceBody2"
        tools:text="Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailValueTextView"
        app:layout_constraintTop_toTopOf="@+id/emailTextView"
        app:layout_constraintStart_toEndOf="@+id/emailTextView"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:textAppearance="?attr/textAppearanceBody2"
        tools:text="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameValueTextView"
        app:layout_constraintTop_toTopOf="@+id/nameTextView"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
        android:layout_marginStart="16dp"
        />

    <TextView
        tools:text="Role"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roleValueTextView"
        app:layout_constraintTop_toTopOf="@+id/roleTextView"
        app:layout_constraintStart_toEndOf="@+id/roleTextView"
        android:layout_marginStart="16dp"
        />

    <com.google.android.material.button.MaterialButton
        android:text="@string/logout"
        android:layout_width="0dp"
        android:layout_marginHorizontal="56dp"
        app:cornerRadius="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/logoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roleTextView"
        android:layout_marginTop="56dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
